--- a/manager/src/main/resources/static/pages/ProgramEnter.html
+++ b/manager/src/main/resources/static/pages/ProgramEnter.html
@@ -54,6 +54,12 @@
                 <div class="layui-card-body">
                     <table class="layui-hide" lay-filter="table-page" id="table-page"></table>
                 </div>
+                <style>
+                    .layui-table[lay-skin=line] {
+                        border-width: 0 0 0 0 !important;
+                        width:100%;
+                    }
+                </style>
             </div>
         </div>
     </div>
