--- a/manager/src/main/resources/static/pages/roundExt.html
+++ b/manager/src/main/resources/static/pages/roundExt.html
@@ -141,7 +141,7 @@
                             }
                         }
                     },
-                    {field: 'ddreward', width: '35%', title: '赛场奖励', sort: true}
+                    {field: 'ddreward', width: 760, title: '赛场奖励', sort: true}
 
                 ]],
                 page: true,
