--- a/manager/src/main/resources/static/pages/roundReceive.html
+++ b/manager/src/main/resources/static/pages/roundReceive.html
@@ -195,16 +195,16 @@
             url: operatorurl + '?datagrid=data',
             cols: [[
                 {type: 'checkbox'},
-                {field: 'ddtime', width: '13%', title: '获奖时间', sort: true},
-                {field: 'dduid', width: 120, title: '用户ID', sort: true},
-                {field: 'userName', width: 120, title: '用户昵称', sort: true},
+                {field: 'ddtime', width: 160, title: '获奖时间', sort: true},
+                {field: 'dduid', width: 280, title: '用户ID', sort: true},
+                {field: 'userName', width: 200, title: '用户昵称', sort: true},
                 {field: 'gameName', width: 120, title: '游戏名称', sort: true},
                 {field: 'ddgcode', width: 120, title: '游戏编号', sort: true},
                 {field: 'ddmcode', width: 120, title: '赛场编号', sort: true},
                 {field: 'roudName', width: 120, title: '赛制名称', sort: true},
                 {field: 'roudTime', width: 120, title: '赛制时长', sort: true},
-                {field: 'ddmstart', width: 120, title: '赛区开始时间', sort: true},
-                {field: 'ddmend', width: 120, title: '赛区结束时间', sort: true},
+                {field: 'ddmstart', width: 160, title: '赛区开始时间', sort: true},
+                {field: 'ddmend', width: 160, title: '赛区结束时间', sort: true},
                 {field: 'ddranking', width: 120, title: '游戏排名', sort: true},
                 {
                     field: 'ddtotal', width: 120, title: '获奖情况', sort: true,
